<resources>
    <string name="app_name">PhuKienCongNghe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_enter_your_mail">Nhập email của bạn</string>
    <string name="text_register">Đăng kí</string>
    <string name="hint_enter_your_password">Nhập mật khẩu</string>
    <string name="text_cancel">HỦY</string>
    <string name="hint_repeat_password">Nhập lại mật khẩu</string>
    <string name="title_setting">Cài Đặt</string>
    <string name="title_mode">Chế độ</string>
    <string name="lable_change_darkmode">Chuyển nền tối</string>
    <string name="title_langue">Ngôn Ngữ</string>
    <string name="title_choice_langue">Chọn ngôn ngữ</string>
    <string name="snackbar_data_must_not_empty">Dữ liệu không được bỏ trống</string>
    <string name="text_password_illegal">Mật khẩu phải có độ dài lớn hơn 8, chứa kí tự hoa-thường, số và kí tự đặc biệt</string>
    <string name="text_email_illegal">Email sai định dạng</string>
    <string name="text_repeat_password_not_match">Hai mật khẩu không khớp nhau</string>
    <string name="text_verify_mail">Xác thực</string>
    <string name="text_go_verify_mail">Xác nhận xác thực email</string>
    <string name="text_welcome_header_fragment">Chưa đăng nhập</string>
    <string name="text_category">DANH MỤC</string>
    <string name="text_home_listproduct">NỔI BẬT</string>
    <string name="text_data_null">Dữ liệu null</string>
    <string name="text_change_password">Đổi mật khẩu</string>
    <string name="text_recovery_password">Khôi phục mật khẩu</string>
    <string name="txt_address_deliver">Địa chỉ giao hàng</string>
    <string name="txt_logout">Đăng xuất</string>
    <string name="txt_home">Trang chủ</string>
    <string name="txt_gui_manage_of_account">Quản lí tài khoản</string>
    <string name="open">Mở</string>
    <string name="close">Đóng</string>
    <string name="txt_name_receiver_args">Người nhận: %s</string>
    <string name="txt_province_city_args">Tỉnh/Thành phố: %s</string>
    <string name="txt_phone_number_args">Số điện thoại: %s</string>
    <string name="txt_address_detail_args">Địa chỉ chi tiết: %s</string>
    <string name="txt_default">Mặc định</string>
    <string name="txt_put_default_address">Đặt địa chỉ mặc định</string>
    <string name="txt_select_detail_address">Chọn địa chỉ chi tiết (Số nhà, tên đường...)</string>
    <string name="txt_select_province_city">Chọn tỉnh/thành phố:</string>
    <string name="txt_enter_your_phone_number">Nhập số điện thoại</string>
    <string name="txt_enter_receiver_name">Nhập tên người nhận</string>
    <string name="txt_confirm">Xác nhận</string>
    <string name="title_cart">Giỏ Hàng</string>
    <string name="button_del_cart">Xóa tất cả</string>
    <string name="btn_selectAll">Chọn tất cả</string>
    <string name="title_sum_item_cart">Tổng cộng</string>
    <string name="btn_payment">Thanh toán</string>
    <string name="txt_select_address_delivery">Chọn địa chỉ giao hàng</string>
    <string name="product_details_variants">Chọn phân loại:</string>
    <string name="product_details_add_product">Thêm vào giỏ</string>
    <string name="product_details_btn_paynow">Mua ngay</string>
    <string name="product_details_decription_product">Mô tả sản phẩm</string>
    <string name="product_details_product_related">Sản phẩm liên quan</string>
    <string name="product_variant_quantity">Số lượng</string>
    <string name="comment_rating"><![CDATA[Bình luận & Đánh giá]]></string>
    <string name="product_details_comment_bro">Viết bình luận của bạn...</string>
    <string name="delete_cart_item">Xóa</string>
    <string name="text_login">Đăng nhập</string>
    <string name="txt_create_new_account">Tạo tài khoản mới</string>
    <string name="txt_forgot_password">Quên mật khẩu?</string>
    <string name="txt_nav_to_login">Đã có tài khoản</string>
    <string name="txt_forgot_password_label">Quên mật khẩu</string>
    <string name="txt_return_login">Quay về đăng nhập</string>
    <string name="txt_enter_email_to_reset_password">Nhập email cần khôi phục mật khẩu</string>
    <string name="text_home_mouse">CHUỘT MÁY TÍNH</string>
    <string name="text_home_keyboard">BÀN PHÍM</string>
    <string name="default_web_client_id">640988251623-4ssg9fmbijucnfmpeb8562bd2obf61fp.apps.googleusercontent.com</string>
    <string name="txt_update_user_address">Cập nhật địa chỉ</string>
    <string name="txt_add_user_address">Thêm địa chỉ</string>
    <string name="profile_email">Email</string>
    <string name="btn_profile_submit_change">Lưu thay đổi</string>
    <string name="edt_fullname_hint">Nhập họ và tên của bạn</string>
    <string name="txtview_fullname_profile">Họ và tên</string>
    <string name="txtview_email_profile">Email tài khoản</string>
    <string name="txtview_type_account_profile">Loại tài khoản</string>
    <string name="btn_submit_profile">Lưu thay đổi</string>
    <string name="btn_change_password_profile">Đổi mật khẩu</string>
    <string name="payment_total_price">Tổng cộng</string>
    <string name="payment_tv_choice_voucher">Chọn mã giảm giá vận chuyển</string>
    <string name="payment_title_product">Sản phẩm</string>
    <string name="payment_change_address">Thay đổi</string>
    <string name="payment_user_address">Địa chỉ giao hàng</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="payment">ĐẶT HÀNG</string>
    <string name="payment_total_price_value">Tổng cộng</string>
    <string name="payment_discount">Giảm giá</string>
    <string name="payment_shipfee">Phí vận chuyển</string>
    <string name="payment_tam_early_price">Tạm tính</string>
    <string name="payment_online">Chuyển khoản / Online</string>
    <string name="payment_cod">Thanh toán khi nhận hàng (COD)</string>
    <string name="title_payment">Thanh toán</string>
    <string name="txt_profile_personal">Thông tin cá nhân</string>
    <string name="payment_choice_voucher_order">Chọn mã giảm giá cho đơn hàng</string>
    <string name="txt_manage_product_admin">Quản lí sản phẩm</string>
    <string name="txt_manage_voucher_admin">Quản lí voucher</string>
    <string name="txt_manage_order_admin">Quản lí đơn hàng</string>
    <string name="txt_admin">Quản trị</string>
    <string name="title_order_history">Lịch sử đặt hàng</string>
    <string name="order_history_total">Tổng tiền:</string>
    <string name="order_history_see_details">Xem chi tiết</string>
    <string name="txt_search_product_by_id_or_name">Tìm kiếm tên sản phẩm.</string>
    <string name="txt_order_history">Lịch sử đơn hàng</string>
    <string name="text_code_prefix">Mã: %s</string>
    <string name="order_detail_list">Danh sách sản phẩm</string>
    <string name="order_details_title">Chi tiết đơn hàng</string>
    <string name="txt_list_sub_image">Danh sách ảnh phụ ([+] Thêm mới)</string>
    <string name="txt_image_general_product">HÌNH ẢNH SẢN PHẨM CHUNG</string>
    <string name="txt_description_product">Mô tả sản phẩm</string>
    <string name="txt_warranty_period">Thời gian bảo hành (tháng)</string>
    <string name="txt_subtitle">Tiêu đề phụ (Subtitle)</string>
    <string name="txt_name_general_product">Tên sản phẩm chung</string>
    <string name="txt_add_new_product_variant">THÊM BIẾN THỂ MỚI</string>
    <string name="hint_voucher_search">Nhập mã voucher...</string>
    <string name="chip_voucher_all">Tất cả</string>
    <string name="chip_voucher_fixed_amount">Giảm tiền mặt</string>
    <string name="chip_voucher_percentage">Giảm theo %</string>
    <string name="chip_voucher_shipping">Giảm phí ship</string>
    <string name="chip_voucher_main_order">Giảm theo đơn hàng</string>
    <string name="chip_admin_voucher_all">Tất cả</string>
    <string name="chip_admin_voucher_fixed_amount">Giảm tiền mặt</string>
    <string name="chip_admin_voucher_percentage">Giảm theo %</string>
    <string name="chip_admin_voucher_ship">Giảm phí ship</string>
    <string name="chip_admin_voucher_order">Giảm theo đơn hàng</string>
    <string name="home_bottom_navbar">Trang chủ</string>
    <string name="category_bottom_navbar">Danh mục</string>
    <string name="voucher_bottom_navbar">Voucher</string>
    <string name="info_bottom_navbar">Thông tin</string>
    <string name="setting_bottom_navbar">Cài đặt</string>
    <string name="lang_vi">Tiếng Việt</string>
    <string name="lang_en">Tiếng Anh</string>
    <string name="txt_advice">Tư vấn</string>

</resources>