<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_bottom_navbar"/>
    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_category"
        android:title="@string/category_bottom_navbar"/>
    <item
        android:id="@+id/nav_voucher"
        android:icon="@drawable/ic_voucher"
        android:title="@string/voucher_bottom_navbar"/>
<!--    <item-->
<!--        android:id="@+id/nav_info"-->
<!--        android:icon="@drawable/ic_info"-->
<!--        android:title="@string/info_bottom_navbar"/>-->
    <item
        android:id="@+id/nav_chatbot"
        android:icon="@drawable/ic_chat_bot"
        android:title="@string/txt_advice"
        />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting_bottom_navbar"/>
</menu>