<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24px"
            app:showAsAction="ifRoom"
            android:title="@string/txt_home" />
        <item
            android:id="@+id/nav_profile_user"
            android:icon="@drawable/ic_profile_avt"
            app:showAsAction="ifRoom"
            android:title="@string/txt_profile_personal" />
        <item
            android:id="@+id/nav_address_user"
            android:icon="@drawable/ic_location_chip_24px"
            app:showAsAction="ifRoom"
            android:title="@string/txt_address_deliver" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_orders_24px"
            app:showAsAction="ifRoom"
            android:title="@string/txt_order_history"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_24px"
            app:showAsAction="ifRoom"
            android:title="@string/txt_logout" />
    </group>

    <group android:id="@+id/group_admin_features" android:visible="false">
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_supervisor_account_24px"
            app:showAsAction="ifRoom"
            android:title="@string/txt_admin" />
    </group>
</menu>