<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tech_background"
    android:orientation="vertical"
    android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hồ sơ cá nhân"
            android:textSize="20sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-black"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgAvatarProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_profile_avt"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/txtview_fullname_profile"
        android:textColor="@color/tech_text_main"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_edt_active"
        android:hint="@string/edt_fullname_hint"
        android:textColorHint="#66FFFFFF"
        android:inputType="textPersonName"
        android:padding="14dp"
        android:textColor="@color/tech_text_main"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/txtview_email_profile"
        android:textColor="@color/tech_text_main"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_edt_locked"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:textColor="#888888"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/txtview_type_account_profile"
        android:textColor="@color/tech_text_main"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtAccountType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_edt_locked"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:inputType="text"
        android:padding="14dp"
        android:textColor="#888888"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/tech_primary"
        android:text="@string/btn_submit_profile"
        android:textColor="@color/tech_surface"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="12dp" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/tech_surface"
        android:text="@string/btn_change_password_profile"
        android:textColor="@color/tech_primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:strokeColor="@color/tech_primary"
        app:strokeWidth="1.5dp"/>

</LinearLayout>