<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Base.Theme.PhuKienCongNghe"
    android:padding="16dp"
    tools:context=".ui.admin.voucher.VoucherManageAdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtSearchCode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/bg_edt_active"
            android:hint="Nhập mã voucher cần tìm..."
            android:paddingHorizontal="16dp"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:textSize="14sp"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOnSurfaceVariant"
            android:inputType="text"
            android:maxLines="1"
            android:elevation="2dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupFilters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAll"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_admin_voucher_all"
                    android:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFixedAmount"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_admin_voucher_fixed_amount"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPercentage"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_admin_voucher_percentage"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipShipping"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_admin_voucher_ship"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOrder"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chip_admin_voucher_order"/>

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvVouchers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddVoucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:contentDescription="TODO"
        app:srcCompat="@android:drawable/ic_input_add"
        app:backgroundTint="?attr/colorPrimary"
        app:tint="?attr/colorOnPrimary" />

</RelativeLayout>